--- a/package.json
+++ b/package.json
@@ -15,6 +15,8 @@
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.80.0",
     "clsx": "^2.1.1",
+    "highlight.js": "^11.11.1",
+    "mermaid": "^11.12.1",
     "next": "14.1.0",
     "react": "^18",
     "react-dom": "^18",
