--- a/package.json
+++ b/package.json
@@ -14,6 +14,7 @@
   "dependencies": {
     "@supabase/ssr": "^0.7.0",
     "@supabase/supabase-js": "^2.80.0",
+    "@vercel/analytics": "^1.5.0",
     "clsx": "^2.1.1",
     "highlight.js": "^11.11.1",
     "mermaid": "^11.12.1",
